fix score display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="shopping-floor">
       <div id="scoreboard"</div>
-        <p>Score :</p>
+        <p class="currentscore">Score : 0</p>
       </div>
     </div>
   </body>
