--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Shopping Spree</title>
   </head>
+  <link rel="stylesheet" type="text/css" href="main.css">
   <script type="text/javascript" src="items.js"></script>
 
   </script>
