--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="shopping-floor">
       <div id="scoreboard"</div>
-        <p class="currentscore">Score : 0</p>
+        <p id="currentscore">Score : 0</p>
       </div>
     </div>
   </body>
