add shopping cart

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   </script>
   <body>
     <div id="shopping-floor">
-      <div id="scoreboard"</div>
+      <div id="scoreboard">
         <p id="currentscore">Score : 0</p>
       </div>
-    </div>
+        <div id=shopping-cart>
+          <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/16757-200.png"/>
+        </div>
+      </div>
   </body>
 </html>
