--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Shopping Spree</title>
   </head>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="//cdn.jsdelivr.net/interact.js/1.2.6/interact.min.js"></script>
   <script type="text/javascript" src="items.js"></script>
 
   </script>
@@ -13,7 +14,7 @@
       <div id="scoreboard">
         <p id="currentscore">Score : 0</p>
       </div>
-        <div id=shopping-cart>
+        <div class="cart">
           <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/16757-200.png"/>
         </div>
       </div>
