--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Shopping Spree</title>
   </head>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <script src="//cdn.jsdelivr.net/interact.js/1.2.6/interact.min.js"></script>
   <script type="text/javascript" src="items.js"></script>
+  <script type="text/javascript" src="interact.min.js"></script>
 
   </script>
   <body>
@@ -14,7 +14,7 @@
       <div id="scoreboard">
         <p id="currentscore">Score : 0</p>
       </div>
-        <div class="cart">
+        <div class="cart dropzone">
           <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/16757-200.png"/>
         </div>
       </div>
