added drop function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="scoreboard">
         <p id="currentscore">Score : 0</p>
       </div>
-        <div class="cart dropzone">
+        <div id="cart" class="cart dropzone">
           <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/16757-200.png"/>
         </div>
       </div>
