--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
 
   </script>
   <body>
-    <div id="shopping-floor">
+    <div id="shopping-floor" class="shopping-floor">
+      <div id="startingscreen">
+        <div id="title">
+          <h1>Shopping Spree</h1>
+        </div>
+
+        <div id=start-button>
+          <h3>Start</h3>
+        </div>
+      <div id="highscore">
+      </div>
+    </div>
+
+    <div id="gameboard">
       <div id="scoreboard">
         <p id="currentscore">Score : 0</p>
+      </div>
+      <div id="timer">
+        <p id="currenttime">Time : 30</p>
       </div>
         <div id="cart" class="cart dropzone">
           <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/16757-200.png"/>
         </div>
       </div>
+    </div>
   </body>
 </html>
