add scoring highscore system

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
         <div id=start-button>
           <h3>Start</h3>
         </div>
+      <div id="currentgamescore">
+      </div>
       <div id="highscore">
       </div>
     </div>
 
     <div id="gameboard">
       <div id="scoreboard">
-        <p id="currentscore">Score : 0</p>
+        <p id="currentscore"></p>
       </div>
       <div id="timer">
-        <p id="currenttime">Time : 30</p>
+        <p id="currenttime"></p>
       </div>
         <div id="cart" class="cart dropzone">
           <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/16757-200.png"/>
