--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Shopping Spree</title>
   </head>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <script type="text/javascript" src="items.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="interact.min.js"></script>
 
   </script>
