remove shopping-floor class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   </script>
   <body>
-    <div id="shopping-floor" class="shopping-floor">
+    <div id="shopping-floor">
       <div id="startingscreen">
         <div id="title">
           <h1>Shopping Spree</h1>
